--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="assets/ico/favicon.ico">
 
-    <title>SOLID - Bootstrap 3 Theme</title>
+    <title>Motion Square Music Demo</title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -42,7 +42,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html">SOLID.</a>
+          <a class="navbar-brand" href="index.html">MSM</a>
         </div>
         <div class="navbar-collapse collapse navbar-right">
           <ul class="nav navbar-nav">
@@ -70,10 +70,9 @@
 	    <div class="container">
 			<div class="row">
 				<div class="col-lg-8 col-lg-offset-2">
-					<h3>Show your work with this beautiful theme</h3>
-					<h1>Eyecatching Bootstrap 3 Theme.</h1>
-					<h5>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h5>
-					<h5>More Lorem Ipsum added here too.</h5>				
+					<h1>Motion Square Music</h1>
+					<h5>Stock music for Game, Film & Multimedia</h5>
+					<h5>(Beta website 2.0)</h5>				
 				</div>
 				<div class="col-lg-8 col-lg-offset-2 himg">
 					<img src="assets/img/browser.png" class="img-responsive">
@@ -90,19 +89,19 @@
  			<div class="row centered">
  				<div class="col-md-4">
  					<i class="fa fa-heart-o"></i>
- 					<h4>Handsomely Crafted</h4>
+ 					<h4>Stock Music</h4>
  					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
  					<p><br/><a href="#" class="btn btn-theme">More Info</a></p>
  				</div>
  				<div class="col-md-4">
  					<i class="fa fa-flask"></i>
- 					<h4>Retina Ready</h4>
+ 					<h4>Loop Music</h4>
  					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
  					<p><br/><a href="#" class="btn btn-theme">More Info</a></p>
  				</div>
  				<div class="col-md-4">
  					<i class="fa fa-trophy"></i>
- 					<h4>Quality Theme</h4>
+ 					<h4>Original Score</h4>
  					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
  					<p><br/><a href="#" class="btn btn-theme">More Info</a></p>
  				</div>		 				
@@ -114,7 +113,7 @@
 	 PORTFOLIO SECTION
 	 ***************************************************************************************************************** -->
 	 <div id="portfoliowrap">
-        <h3>LATEST WORKS</h3>
+        <h3>Music Collection</h3>
 
         <div class="portfolio-centered">
             <div class="recentitems portfolio">
