--- a/about.html
+++ b/about.html
@@ -100,46 +100,13 @@
 	 ***************************************************************************************************************** -->
 
 	 <div class="container mtb">
-	 	<div class="row centered">
+	 	<div class="row centered right">
 		 	<h3 class="mb">MEET OUR TEAM</h3>
 		 	
-		 	<div class="col-lg-3 col-md-3 col-sm-3">
-				<div class="he-wrap tpl6">
-				<img src="assets/img/team/team01.jpg" alt="">
-					<div class="he-view">
-						<div class="bg a0" data-animate="fadeIn">
-                            <h3 class="a1" data-animate="fadeInDown">Contact Me:</h3>
-                            <a href="#" class="dmbutton a2" data-animate="fadeInUp"><i class="fa fa-envelope"></i></a>
-                            <a href="#" class="dmbutton a2" data-animate="fadeInUp"><i class="fa fa-twitter"></i></a>
-                    	</div><!-- he bg -->
-					</div><!-- he view -->		
-				</div><!-- he wrap -->
-				<h4>Mark Webber</h4>
-				<h5 class="ctitle">CEO</h5>
-				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-				<div class="hline"></div>
-		 	</div><! --/col-lg-3 -->
 
-		 	<div class="col-lg-3 col-md-3 col-sm-3">
+		 	<div class="col-lg-6 col-md-6 col-sm-6">
 				<div class="he-wrap tpl6">
-				<img src="assets/img/team/team02.jpg" alt="">
-					<div class="he-view">
-						<div class="bg a0" data-animate="fadeIn">
-                            <h3 class="a1" data-animate="fadeInDown">Contact Me:</h3>
-                            <a href="#" class="dmbutton a2" data-animate="fadeInUp"><i class="fa fa-envelope"></i></a>
-                            <a href="#" class="dmbutton a2" data-animate="fadeInUp"><i class="fa fa-twitter"></i></a>
-                    	</div><!-- he bg -->
-					</div><!-- he view -->		
-				</div><!-- he wrap -->
-				<h4>Paul Jameson</h4>
-				<h5 class="ctitle">LEAD DESIGNER</h5>
-				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-				<div class="hline"></div>
-		 	</div><! --/col-lg-3 -->
-
-		 	<div class="col-lg-3 col-md-3 col-sm-3">
-				<div class="he-wrap tpl6">
-				<img src="assets/img/team/team03.jpg" alt="">
+				<img class="img-rounded" width="300px" src="assets/img/team/team03.jpg" alt="">
 					<div class="he-view">
 						<div class="bg a0" data-animate="fadeIn">
                             <h3 class="a1" data-animate="fadeInDown">Contact Me:</h3>
@@ -154,9 +121,9 @@
 				<div class="hline"></div>
 		 	</div><! --/col-lg-3 -->
 
-		 	<div class="col-lg-3 col-md-3 col-sm-3">
+		 	<div class="col-lg-6 col-md-6 col-sm-6">
 				<div class="he-wrap tpl6">
-				<img src="assets/img/team/team04.jpg" alt="">
+				<img class="img-rounded" width="300px" src="assets/img/team/team04.jpg" alt="">
 					<div class="he-view">
 						<div class="bg a0" data-animate="fadeIn">
                             <h3 class="a1" data-animate="fadeInDown">Contact Me:</h3>
