update services info

--- a/index.html
+++ b/index.html
@@ -17,10 +17,6 @@
     <link href="assets/css/style.css" rel="stylesheet">
     <link href="assets/css/font-awesome.min.css" rel="stylesheet">
 
-
-    <!-- Just for debugging purposes. Don't actually copy this line! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -86,28 +82,34 @@
 	 ***************************************************************************************************************** -->
 	 <div id="service">
 	 	<div class="container">
- 			<div class="row centered">
- 				<div class="col-md-4">
+			<div class="row centered">
+				<div class="col-md-3">
  					<i class="fa fa-heart-o"></i>
  					<h4>Stock Music</h4>
- 					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
- 					<p><br/><a href="#" class="btn btn-theme">More Info</a></p>
+					<p>เช่าดนตรีในรูปแบบจบในหนึ่งเพลง(song) เพื่อใช้ในงานโฆษณา เกมส์ ภาพยนต์ และอื่นๆ</p>
+					<p><br/><a href="#" class="btn btn-theme">More Info</a></p>
  				</div>
- 				<div class="col-md-4">
+ 				<div class="col-md-3">
  					<i class="fa fa-flask"></i>
  					<h4>Loop Music</h4>
- 					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+					<p>ดนตรีที่วนซ้ำได้ เพื่อใช้ในงานเกมส์ วิดีโอ infographic หรืออื่นๆ</p>
  					<p><br/><a href="#" class="btn btn-theme">More Info</a></p>
  				</div>
- 				<div class="col-md-4">
+ 				<div class="col-md-3">
  					<i class="fa fa-trophy"></i>
  					<h4>Original Score</h4>
- 					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+					<p>ประพันธ์ดนตรีขึ้นมาใหม่ ดนตรีประกอบภาพยนต์ เกมส์ หรือสื่อโฆษณา</p>
  					<p><br/><a href="#" class="btn btn-theme">More Info</a></p>
- 				</div>		 				
-	 		</div>
-	 	</div><! --/container -->
-	 </div><! --/service -->
+ 				</div>
+				<div class="col-md-3">
+					<i class="fa fa-trophy"></i>
+					<h4>Original Score</h4>
+					<p>เปลี่ยนจาก MIDI, Score ให้กลายเป็นเสียงเสมือนจริง</p>
+					<p><br/><a href="#" class="btn btn-theme">More Info</a></p>
+				</div>
+			</div>
+	 	</div> <!--/container -->
+	 </div><!--/service -->
 	 
 	<!-- *****************************************************************************************************************
 	 PORTFOLIO SECTION
@@ -168,7 +170,7 @@
 						</div><!-- he view -->		
 					</div><!-- he wrap -->
 				</div><!-- end col-12 -->
-                                        
+
                 <div class="portfolio-item books">
                     <div class="he-wrap tpl6">
 					<img src="assets/img/portfolio/portfolio_05.jpg" alt="">
@@ -302,29 +304,6 @@
 	 		</div><! --/row -->
 	 	</div><! --/container -->
 	 </div><! --/twrap -->
-	 
-	<!-- *****************************************************************************************************************
-	 OUR CLIENTS
-	 ***************************************************************************************************************** -->
-	 <div id="cwrap">
-		 <div class="container">
-		 	<div class="row centered">
-			 	<h3>OUR CLIENTS</h3>
-			 	<div class="col-lg-3 col-md-3 col-sm-3">
-			 		<img src="assets/img/clients/client01.png" class="img-responsive">
-			 	</div>
-			 	<div class="col-lg-3 col-md-3 col-sm-3">
-			 		<img src="assets/img/clients/client02.png" class="img-responsive">
-			 	</div>
-			 	<div class="col-lg-3 col-md-3 col-sm-3">
-			 		<img src="assets/img/clients/client03.png" class="img-responsive">
-			 	</div>
-			 	<div class="col-lg-3 col-md-3 col-sm-3">
-			 		<img src="assets/img/clients/client04.png" class="img-responsive">
-			 	</div>
-		 	</div><! --/row -->
-		 </div><! --/container -->
-	 </div><! --/cwrap -->
 
 	<!-- *****************************************************************************************************************
 	 FOOTER
@@ -332,7 +311,7 @@
 	 <div id="footerwrap">
 	 	<div class="container">
 		 	<div class="row">
-		 		<div class="col-lg-4">
+				<div class="col-lg-4">
 		 			<h4>About</h4>
 		 			<div class="hline-w"></div>
 		 			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
@@ -357,10 +336,9 @@
 		 				United States.<br/>
 		 			</p>
 		 		</div>
-		 	
-		 	</div><! --/row -->
-	 	</div><! --/container -->
-	 </div><! --/footerwrap -->
+		 	</div><!--/row -->
+	 	</div><!--/container -->
+	 </div><!--/footerwrap -->
 	 
     <!-- Bootstrap core JavaScript
     ================================================== -->
