--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
           <ul class="nav navbar-nav">
             <li class="active"><a href="index.html">HOME</a></li>
             <li><a href="about.html">ABOUT</a></li>
+			<li><a href="services.html">SERVICES</a></li>
             <li><a href="contact.html">CONTACT</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">PAGES <b class="caret"></b></a>
@@ -68,7 +69,6 @@
 				<div class="col-lg-8 col-lg-offset-2">
 					<h1>Motion Square Music</h1>
 					<h5>Stock music for Game, Film & Multimedia</h5>
-					<h5>(Beta website 2.0)</h5>				
 				</div>
 				<div class="col-lg-8 col-lg-offset-2 himg">
 					<img src="assets/img/browser.png" class="img-responsive">
@@ -82,33 +82,37 @@
 	 ***************************************************************************************************************** -->
 	 <div id="service">
 	 	<div class="container">
+			<h3 class="centered">Services we offered</h3>
 			<div class="row centered">
-				<div class="col-md-3">
+				<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
  					<i class="fa fa-heart-o"></i>
  					<h4>Stock Music</h4>
 					<p>เช่าดนตรีในรูปแบบจบในหนึ่งเพลง(song) เพื่อใช้ในงานโฆษณา เกมส์ ภาพยนต์ และอื่นๆ</p>
-					<p><br/><a href="#" class="btn btn-theme">More Info</a></p>
+					<!--<p><br/><a href="#" class="btn btn-theme">More Info</a></p>-->
  				</div>
- 				<div class="col-md-3">
+ 				<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
  					<i class="fa fa-flask"></i>
  					<h4>Loop Music</h4>
 					<p>ดนตรีที่วนซ้ำได้ เพื่อใช้ในงานเกมส์ วิดีโอ infographic หรืออื่นๆ</p>
- 					<p><br/><a href="#" class="btn btn-theme">More Info</a></p>
+ 					<!--<p><br/><a href="#" class="btn btn-theme">More Info</a></p>-->
  				</div>
- 				<div class="col-md-3">
+ 				<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
  					<i class="fa fa-trophy"></i>
  					<h4>Original Score</h4>
 					<p>ประพันธ์ดนตรีขึ้นมาใหม่ ดนตรีประกอบภาพยนต์ เกมส์ หรือสื่อโฆษณา</p>
- 					<p><br/><a href="#" class="btn btn-theme">More Info</a></p>
+ 					<!--<p><br/><a href="#" class="btn btn-theme">More Info</a></p>-->
  				</div>
-				<div class="col-md-3">
+				<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
 					<i class="fa fa-trophy"></i>
-					<h4>Original Score</h4>
+					<h4>Mock Up Score</h4>
 					<p>เปลี่ยนจาก MIDI, Score ให้กลายเป็นเสียงเสมือนจริง</p>
-					<p><br/><a href="#" class="btn btn-theme">More Info</a></p>
+					<!--<p><br/><a href="#" class="btn btn-theme">More Info</a></p>-->
 				</div>
 			</div>
-	 	</div> <!--/container -->
+			<div class="row centered">
+				<a href="#" class="btn btn-theme">More Service Information</a>
+			</div>
+	 	</div> <!--/sub container -->
 	 </div><!--/service -->
 	 
 	<!-- *****************************************************************************************************************
@@ -260,7 +264,7 @@
 
 	 <div class="container mtb">
 	 	<div class="row">
-	 		<div class="col-lg-4 col-lg-offset-1">
+	 		<!--<div class="col-lg-4 col-lg-offset-1">
 		 		<h4>More About Our Agency.</h4>
 		 		<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. </p>
  				<p><br/><a href="about.html" class="btn btn-theme">More Info</a></p>
@@ -284,27 +288,24 @@
 	 			<p><a href="single-post.html">Bootstrap 3 framework is the best.</a></p>
 	 			<p><a href="single-post.html">You need this theme, buy it now.</a></p>
 	 			<p><a href="single-post.html">This theme is what you need.</a></p>
-	 		</div>
+	 		</div>-->
+			
+			<div class="col-lg-6">
+				<h4>About MotionSquareMusic</h4>
+ 				<p>เคยมั้ยที่ต้องขโมยเพลงบนอินเตอร์เน็ตมาใช้ในภาพยนต์ของคุณเพราะว่าไม่มีงบจะจ้างนักแต่งเพลง? <br><br>
+
+				เคยมั้ยที่ไม่สามารถหาเพลงที่ถูกใจมาใช้ในงานของคุณได้ซะที? <br><br>
+
+				เรา Motion Square Music นำเสนอหนทางที่ “ง่ายที่สุด” และ “เร็วที่สุด” สำหรับคนทำภาพยนต์ทุกๆแนวไม่ว่าจะสั้นหรือยาว เกมส์ โฆษณาและสื่ออื่นๆ ด้วยเพลงจาก composer รุ่นใหม่ที่มีประสบการณ์ ที่เปิดให้คุณสามารถซื้อหรือสั่งทำและนำไปใช้ในโปรเจ็คของคุณได้ทันที ด้วยราคาที่เป็นมิตรทำให้คุณเองก็สามารถได้ใช้งานดีๆที่ช่วยยกระดับโปรเจ็ค ของคุณ แม้จะมีงบการเงินที่จำกัด เริ่มต้นที่ 350 บาท
+				</p>
+			</div>
+			<div class="col-lg-6">
+				<img class="img-responsive" src="assets/img/agency.jpg" alt="">
+			</div>
 	 		
 	 	</div><! --/row -->
 	 </div><! --/container -->
 	 
-	<!-- *****************************************************************************************************************
-	 TESTIMONIALS
-	 ***************************************************************************************************************** -->
-	 <div id="twrap">
-	 	<div class="container centered">
-	 		<div class="row">
-	 			<div class="col-lg-8 col-lg-offset-2">
-	 			<i class="fa fa-comment-o"></i>
-	 			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
-	 			<h4><br/>Marcel Newman</h4>
-	 			<p>WEB DESIGNER - BLACKTIE.CO</p>
-	 			</div>
-	 		</div><! --/row -->
-	 	</div><! --/container -->
-	 </div><! --/twrap -->
-
 	<!-- *****************************************************************************************************************
 	 FOOTER
 	 ***************************************************************************************************************** -->
