--- a/about.html
+++ b/about.html
@@ -111,17 +111,16 @@
 				<img class="img-rounded" width="300px" src="assets/img/team/phil_aboutpg.jpg" alt="">
 					<div class="he-view">
 						<div class="bg a0" data-animate="fadeIn">
-                            <h3 class="a1" data-animate="fadeInDown">Contact Me:</h3>
-                            <a href="#" class="dmbutton a2" data-animate="fadeInUp"><i class="fa fa-envelope"></i></a>
-                            <a href="#" class="dmbutton a2" data-animate="fadeInUp"><i class="fa fa-twitter"></i></a>
+                            <h3 class="a1" data-animate="fadeInDown">Resume(CV):</h3>
+                            <a href="#" class="dmbutton a2" data-animate="fadeInUp"><i class="fa-file-pdf-o"></i></a>
                     	</div><!-- he bg -->
 					</div><!-- he view -->		
 				</div><!-- he wrap -->
 				<h4>Chapavich “Phil” Temnitikul</h4>
 				<!--<h5 class="ctitle">LEAD DEVELOPER</h5>-->
-				<p class="text-justify">สำเร็จการศึกษาปริญญาตรีด้านการประพันธ์เพลงจากมหาวิทยาลัยรังสิต เคยได้รับทุนการศึกษาจากเยอรมันเพื่อไปเข้าร่วม workshop กับนักแต่งเพลงมีชื่อเสียงด้านดนตรีประกอบภาพยนต์ที่ Hamburg, Germany ในงาน FilmSoundHamburg รางวัลที่เคยได้รับเช่น Asia Music Festival (2010), Remix C-Quint เจ้าชู้รู้ตัวป่ะ(Pretty Killer) (2013) ของแกรมมี่, และล่าสุดงาน Remix อีกชิ้นได้ไปจำหน่ายกับค่ายเพลงของอังกฤษ ชัพวิชญ์ได้ผ่านงานมามากมายเช่นภาพยนต์ หนังสั้น หนังอิสระ เกมส์ โฆษณา ให้กับบริษัทอาทิ Samsung, GTH, ททท., Play Channel ได้ผลิตเพลงในหนังที่ได้ฉายเทศการหนังเช่น The 56th BFI Lonfon Film Festival, The 30th Torino International Film Festival.  นอกจากนี้ยังมีผลงานส่วนตัวในชื่อศิลปิน “phil_wc” เพื่อผลิตดนตรี Electronic, Experimental, Ambient. 
+				<p class="text-justify">     สำเร็จการศึกษาปริญญาตรีด้านการประพันธ์เพลงจากมหาวิทยาลัยรังสิต เคยได้รับทุนการศึกษาจากเยอรมันเพื่อไปเข้าร่วม workshop กับนักแต่งเพลงมีชื่อเสียงด้านดนตรีประกอบภาพยนต์ที่ Hamburg, Germany ในงาน FilmSoundHamburg รางวัลที่เคยได้รับเช่น Asia Music Festival (2010), Remix C-Quint เจ้าชู้รู้ตัวป่ะ(Pretty Killer) (2013) ของแกรมมี่, และล่าสุดงาน Remix อีกชิ้นได้ไปจำหน่ายกับค่ายเพลงของอังกฤษ ชัพวิชญ์ได้ผ่านงานมามากมายเช่นภาพยนต์ หนังสั้น หนังอิสระ เกมส์ โฆษณา ให้กับบริษัทอาทิ Samsung, GTH, ททท., Play Channel ได้ผลิตเพลงในหนังที่ได้ฉายเทศการหนังเช่น The 56th BFI Lonfon Film Festival, The 30th Torino International Film Festival.  นอกจากนี้ยังมีผลงานส่วนตัวในชื่อศิลปิน “phil_wc” เพื่อผลิตดนตรี Electronic, Experimental, Ambient. 
 <br><br>
-ปัจจุบันเป็นนักแต่งเพลงอิสระและกำลังศึกษาต่อที่ UCLA ด้านดนตรีประกอบหนัง</p>
+ปัจจุบันเป็นนักแต่งเพลงอิสระและกำลังศึกษาต่อที่ UCLA สหรัฐอเมริกา ด้านดนตรีประกอบภาพยนต์</p>
 				<div class="hline"></div>
 		 	</div><! --/col-lg-3 -->
 
@@ -130,15 +129,14 @@
 				<img class="img-rounded" width="300px" src="assets/img/team/bill_aboutpg.jpg" alt="">
 					<div class="he-view">
 						<div class="bg a0" data-animate="fadeIn">
-                            <h3 class="a1" data-animate="fadeInDown">Contact Me:</h3>
-                            <a href="#" class="dmbutton a2" data-animate="fadeInUp"><i class="fa fa-envelope"></i></a>
-                            <a href="#" class="dmbutton a2" data-animate="fadeInUp"><i class="fa fa-twitter"></i></a>
+                            <h3 class="a1" data-animate="fadeInDown">Resume(CV):</h3>
+                            <a href="#" class="dmbutton a2" data-animate="fadeInUp"><i class="fa-file-pdf-o"></i></a>
                     	</div><!-- he bg -->
 					</div><!-- he view -->		
 				</div><!-- he wrap -->
 				<h4>Piyatut “Bill” Hemstapat</h4>
 				<!--<h5 class="ctitle">MARKETING</h5>-->
-				<p class="text-justify">ได้รับเลือกโดย American Society of Composer and Publisher (ASCAP) ให้เป็นนักแต่งเพลงที่น่าจับตามองแห่งปี (Composer to watch) ในปี 2013 ปิยทัศน์สร้างผลงานในสายงานเพลงประกอบภาพยนต์อย่างรวดเร็วโดยมีผลงานเด่นๆเช่น ภาพยนต์เรื่อง พี่ชาย | My Bromance, การ์ตูนอนิเมชั่น La Flora และ เว็บซีรียส์ Infinite love นอกจากผลงานด้านเพลงประกอบภาพยนต์แล้ว ปิยทัศน์ยังทำงานในฐานะ producer ที่ผลิตผลงานเพลงให้กับศิลปินเช่น ฟลุ๊ค พชร (ฟลุ๊คเดอะสตาร์), Lucid Dream Syndrome, และ Shoot the Dog
+				<p class="text-justify">     ได้รับเลือกโดย American Society of Composer and Publisher (ASCAP) ให้เป็นนักแต่งเพลงที่น่าจับตามองแห่งปี (Composer to watch) ในปี 2013 ปิยทัศน์สร้างผลงานในสายงานเพลงประกอบภาพยนต์อย่างรวดเร็วโดยมีผลงานเด่นๆเช่น ภาพยนต์เรื่อง พี่ชาย | My Bromance, การ์ตูนอนิเมชั่น La Flora และ เว็บซีรียส์ Infinite love นอกจากผลงานด้านเพลงประกอบภาพยนต์แล้ว ปิยทัศน์ยังทำงานในฐานะ producer ที่ผลิตผลงานเพลงให้กับศิลปินเช่น ฟลุ๊ค พชร (ฟลุ๊คเดอะสตาร์), Lucid Dream Syndrome, และ Shoot the Dog
 <br><br>
 ปิยทัศน์จบการศึกษาจากวิทยาลัยดุริยางคศิลป์ ม.มหิดล และขณะนี้กำลังศึกษาต่อในแขนง Commercial Music Production ที่ College-Conservatory of Music University of Cincinnati</p>
 				<div class="hline"></div>
