--- a/services.html
+++ b/services.html
@@ -69,7 +69,7 @@
 	<div id="blue">
 	    <div class="container">
 			<div class="row">
-				<h3>Our services.</h3>
+				<h3>Pricing and Services</h3>
 			</div><!-- /row -->
 	    </div> <!-- /container -->
 	</div><!-- /blue -->
@@ -86,15 +86,22 @@
 	 		<div class="col-lg-12">
 	 			<! -- Blog Post 1 -->
 		 		<p><img class="img-responsive" src="assets/img/post01.jpg"></p>
-		 		<a href="single-post.html"><h3 class="ctitle">Time to change your apps.</h3></a>
-		 		<p><b>Lorem Ipsum</b> is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-		 		<p>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-		 		<p>Contrary to popular belief, <b>Lorem Ipsum is not simply random text</b>. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at <a href="#">Hampden-Sydney College</a> in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source.</p>
-		 		<p>Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</p>
-		 		<h4>Why do we use it?</h4>
-		 		<p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English.</p>
-		 		<blockquote>Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</blockquote>
-		 		<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+		 		<a href="single-post.html"><h3 class="ctitle">Pricing and Services</h3></a>
+		 	    <br><h4>LOOP MUSIC</h4>
+                <p>ดนตรีที่วนซ้ำได้ เพื่อใช้ในงานเกมส์ วิดีโอ infographic หรืออื่นๆ<br />คิดราคาตามความยาวลูปดังนี้<br /><br />20-30 วินาที 350 Baht<br />30-60 วินาที 400 Baht<br />1:00-1:30 นาที 450 Baht<br />1:30-2:00 นาที 550 Baht<br />&gt;2:00 นาที 600 Baht</p>
+                    <p><span style="text-decoration: underline;">ลิขสิทธิ์เพลงมีสองรูปแบบ<br /></span>1. เช่า (Single Use License)- ใช้ได้ต่อหนึ่งโปรเจกต์* ราคาตามที่กำหนดด้านบน หลังการตกลงซื้อขายท่านต้องกรอกเอกสารแล้วส่งมาตามอีเมลนี้ stockmusicth@gmail.com<br />เอกสาร&nbsp;: <a href="http://goo.gl/znVeId">http://goo.gl/xH9vK6</a><br />2. ซื้อขาด (Perpetual License) - ใช้ได้ตลอดไปทุกโปรเจกต์ ราคาเราจะคิดอีกแบบนึงครับ ติดต่อมาได้ที่อีเมล stockmusicth@gmail.com</p>
+                    <p>ท่านสามารถให้แต่งใหม่ในราคาถูกได้ โดยที่ลิขสิทธ์เพลงยังเป็นของเรา(Motion Square Music)อยู่และเราสามารถเอาไปใช้ต่อได้ โดยคิดราคาก็เป็นราคาเดิมตามเวลา + 300 Baht ค่าทำใหม่ครับ (ราคาพิเศษจำนวนจำกัด ราคาจะมีการเปลี่ยนแปลงภายหลัง)<br /><br />เช่นถ้าแต่งลูปในเวลา 45 วินาที ราคาก็จะเป็น 400+300 = 700 บาท ครับ</p>
+                    <p>_______________<br />* หนึ่งโปรเจกต์ยกตัวอย่างเช่น รู้สู้ Flood เช่าเพลงไปใช้ จะสามารถใส่ได้ทุกวิดีโอภายใต้โปรเจกต์ชื่อ รู้สู้ Flood เท่านั้น<br />** บางลูปจะมี start กับ end เพื่อไว้ใช้เริ่มเพลงกับจบเพลงให้ด้วย<br />*** หากแต่งใหม่ความยาวมากกว่า 2:00 นาที ราคาอาจมีการเปลี่ยนแปลงตามความเหมาะสม</p>
+                    <br><h4>STOCK MUSIC</h4>
+                    <p>เช่าดนตรีในรูปแบบจบในหนึ่งเพลง(song)ที่อยู่ใน Library ของเรา เพื่อใช้ในงานโฆษณา เกมส์ ภาพยนต์ และอื่นๆ ราคาสามารถสอบถามได้ที่ stockmusicth@gmail.com</p>
+                    <p>ราคามีการเปลี่ยนแปลงตามขนาดของโปรดักชั่น และวิธีการเผยแพร่ทางสื่อ</p>
+                    <br><h4>ORIGINAL SCORE</h4>
+                    <p>ประพันธ์ดนตรีขึ้นมาใหม่ ดนตรีประกอบภาพยนต์ เกมส์ หรือสื่อโฆษณา (ที่ไม่ใช่เป็นดนตรี Loop)</p>
+                    <p>ราคาขั้นต่ำต่อหนึ่งโปรเจ็กต์ นาทีแรกสองพันบาท นาทีต่อไปนาทีละหนึ่งพันบาท* ราคาอาจเปลี่ยนแปลงตามความเหมาะสม สามารถสอบถามได้ที่ stockmusicth@gmail.com</p>
+                    <p>* ราคาดังกล่าวไม่รวมค่าใช้จ่ายหากมีการอัดเสียงเครื่องดนตรีจริง</p>
+                    <br><h4>MOCK UP SCORE</h4>
+                    <p>เปลี่ยนจาก MIDI ให้กลายเป็นเสียงเสมือนจริง</p>
+                    <p>ราคามีการเปลี่ยนแปลงตามความเหมาะสม สามารถสอบถามได้ที่ stockmusicth@gmail.com</p>
 		 		<div class="spacing"></div> 		
 			</div><!--/col-lg-12-->
 	 	</div><! --/row -->
