--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 	 ***************************************************************************************************************** -->
 	 <div id="service">
 	 	<div class="container">
-			<h3 class="centered">Services we offered</h3>
+			<h3 class="centered">Services we offered</h3><br/>
 			<div class="row centered">
 				<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
  					<i class="fa fa-heart-o"></i>
@@ -110,7 +110,7 @@
 				</div>
 			</div>
 			<div class="row centered">
-				<a href="#" class="btn btn-theme">More Service Information</a>
+                <br><a href="services.html" class="btn btn-theme">More Service Information</a>
 			</div>
 	 	</div> <!--/sub container -->
 	 </div><!--/service -->
@@ -271,8 +271,9 @@
 
 				เคยมั้ยที่ไม่สามารถหาเพลงที่ถูกใจมาใช้ในงานของคุณได้ซะที? <br><br>
 
-				เรา Motion Square Music นำเสนอหนทางที่ “ง่ายที่สุด” และ “เร็วที่สุด” สำหรับคนทำภาพยนต์ทุกๆแนวไม่ว่าจะสั้นหรือยาว เกมส์ โฆษณาและสื่ออื่นๆ ด้วยเพลงจาก composer รุ่นใหม่ที่มีประสบการณ์ ที่เปิดให้คุณสามารถซื้อหรือสั่งทำและนำไปใช้ในโปรเจ็คของคุณได้ทันที ด้วยราคาที่เป็นมิตรทำให้คุณเองก็สามารถได้ใช้งานดีๆที่ช่วยยกระดับโปรเจ็ค ของคุณ แม้จะมีงบการเงินที่จำกัด เริ่มต้นที่ 350 บาท
+				เรา Motion Square Music นำเสนอหนทางที่ “ง่ายที่สุด” และ “เร็วที่สุด” สำหรับคนทำภาพยนต์ทุกๆแนวไม่ว่าจะสั้นหรือยาว เกมส์ โฆษณาและสื่ออื่นๆ ด้วยเพลงจาก composer ที่มีประสบการณ์มามากมายและศึกษาด้านดนตรีประกอบภาพยนต์มาโดยตรง ที่เปิดให้คุณสามารถซื้อหรือสั่งทำและนำไปใช้ในโปรเจ็คของคุณได้ทันที ด้วยราคาที่เป็นมิตรทำให้คุณเองก็สามารถได้ใช้งานดีๆที่ช่วยยกระดับโปรเจ็ค ของคุณ แม้จะมีงบการเงินที่จำกัด เริ่มต้นที่ 350 บาท
 				</p>
+                <br/><a href="services.html" class="btn btn-theme">Know more about us</a>
 			</div>
 			<div class="col-lg-6">
 				<img class="img-responsive" src="assets/img/agency.jpg" alt="">
