--- a/about.html
+++ b/about.html
@@ -86,12 +86,11 @@
 	 		
 	 		<div class="col-lg-6">
 		 		<h4>About MotionSquareMusic</h4>
- 				<p>เคยมั้ยที่ต้องขโมยเพลงบนอินเตอร์เน็ตมาใช้ในภาพยนต์ของคุณเพราะว่าไม่มีงบจะจ้างนักแต่งเพลง? <br><br>
-
-				เคยมั้ยที่ไม่สามารถหาเพลงที่ถูกใจมาใช้ในงานของคุณได้ซะที? <br><br>
-
-				เรา Motion Square Music นำเสนอหนทางที่ “ง่ายที่สุด” และ “เร็วที่สุด” สำหรับคนทำภาพยนต์ทุกๆแนวไม่ว่าจะสั้นหรือยาว เกมส์ โฆษณาและสื่ออื่นๆ ด้วยเพลงจาก composer รุ่นใหม่ที่มีประสบการณ์ ที่เปิดให้คุณสามารถซื้อหรือสั่งทำและนำไปใช้ในโปรเจ็คของคุณได้ทันที ด้วยราคาที่เป็นมิตรทำให้คุณเองก็สามารถได้ใช้งานดีๆที่ช่วยยกระดับโปรเจ็ค ของคุณ แม้จะมีงบการเงินที่จำกัด เริ่มต้นที่ 350 บาท
-				</p>
+ 				<p>Motion Square Music คือที่ที่เราขาย music library เช่น loops, songs ในราคาถูก และสามารถผลิตเพลงประกอบได้ในหลากหลายรูปแบบจากเราผู้ชำนาญงาน MIDI Instruments บวกกับ software instruments คุณภาพสูงมูลค่ารวมกว่าสองแสนบาท และเราได้ศึกษาเฉพาะทางมาเพื่อผลิตดนตรีประกอบภาพยนต์โดยตรง</p>
+<blockquote>
+<p>&ldquo;Let the music moves your emotion&rdquo;</p>
+</blockquote>
+                <p>เคยมั้ยที่ต้องขโมยเพลงบนอินเตอร์เน็ตมาใช้ในภาพยนต์ของคุณเพราะว่าไม่มีงบจะจ้างนักแต่งเพลง?<br /><br />เคยมั้ยที่ไม่สามารถหาเพลงที่ถูกใจมาใช้ในงานของคุณได้ซะที?<br /><br />เรา นำเสนอหนทางที่ &ldquo;ง่ายที่สุด&rdquo; และ &ldquo;เร็วที่สุด&rdquo; สำหรับคนทำภาพยนต์ทุกๆแนวไม่ว่าจะสั้นหรือยาว เกมส์ โฆษณาและสื่ออื่นๆ ด้วยเพลงจาก composer รุ่นใหม่ที่มีประสบการณ์ ที่เปิดให้คุณสามารถซื้อหรือสั่งทำและนำไปใช้ในโปรเจ็คของคุณได้ทันที ด้วยราคาที่เป็นมิตรทำให้คุณเองก็สามารถได้ใช้งานดีๆที่ช่วยยกระดับโปรเจ็คของคุณ แม้จะมีงบการเงินที่จำกัด</p>
 				<!--<p><br/><a href="contact.html" class="btn btn-theme">Contact Us</a></p>-->
 	 		</div>
 	 	</div><! --/row -->
