--- a/services.html
+++ b/services.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--user-scalable=no-->
+    <meta name="viewport" content="width=device-width, initial-scale=1,user-scalable=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="shortcut icon" href="assets/ico/favicon.ico">
 
-    <title>SOLID - Bootstrap 3 Theme</title>
+    <title>Motion Square Music Demo</title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -16,146 +16,183 @@
     <!-- Custom styles for this template -->
     <link href="assets/css/style.css" rel="stylesheet">
     <link href="assets/css/font-awesome.min.css" rel="stylesheet">
-
-
-    <!-- Just for debugging purposes. Don't actually copy this line! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+    <link rel="shortcut icon" href="assets/ico/favicon.ico">
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-    
+
     <script src="assets/js/modernizr.js"></script>
-  </head>
+</head>
 
-  <body>
+<body>
 
-    <!-- Fixed navbar -->
-    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
-      <div class="container">
+<!-- Fixed navbar -->
+<div class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <div class="container">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="index.html">SOLID.</a>
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="index.html">SOLID.</a>
         </div>
         <div class="navbar-collapse collapse navbar-right">
-          <ul class="nav navbar-nav">
-            <li><a href="index.html">HOME</a></li>
-            <li><a href="about.html">ABOUT</a></li>
-            <li><a href="contact.html">CONTACT</a></li>
-            <li class="dropdown active">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">PAGES <b class="caret"></b></a>
-              <ul class="dropdown-menu">
-                <li><a href="blog.html">BLOG</a></li>
-                <li><a href="single-post.html">SINGLE POST</a></li>
-                <li><a href="portfolio.html">PORTFOLIO</a></li>
-                <li><a href="single-project.html">SINGLE PROJECT</a></li>
-              </ul>
-            </li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
+            <ul class="nav navbar-nav">
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="about.html">ABOUT</a></li>
+                <li><a href="contact.html">CONTACT</a></li>
+                <li class="dropdown active">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">PAGES <b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="blog.html">BLOG</a></li>
+                        <li><a href="single-post.html">SINGLE POST</a></li>
+                        <li><a href="portfolio.html">PORTFOLIO</a></li>
+                        <li><a href="single-project.html">SINGLE PROJECT</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+        <!--/.nav-collapse -->
     </div>
+</div>
 
-	<!-- *****************************************************************************************************************
-	 BLUE WRAP
-	 ***************************************************************************************************************** -->
-	<div id="blue">
-	    <div class="container">
-			<div class="row">
-				<h3>Pricing and Services</h3>
-			</div><!-- /row -->
-	    </div> <!-- /container -->
-	</div><!-- /blue -->
-
-	 
-	<!-- *****************************************************************************************************************
-	 BLOG CONTENT
-	 ***************************************************************************************************************** -->
-
-	 <div class="container mtb">
-	 	<div class="row">
-	 	
-	 		<! -- SINGLE POST -->
-	 		<div class="col-lg-12">
-	 			<! -- Blog Post 1 -->
-		 		<p><img class="img-responsive" src="assets/img/post01.jpg"></p>
-		 		<a href="single-post.html"><h3 class="ctitle">Pricing and Services</h3></a>
-		 	    <br><h4>LOOP MUSIC</h4>
-                <p>ดนตรีที่วนซ้ำได้ เพื่อใช้ในงานเกมส์ วิดีโอ infographic หรืออื่นๆ<br />คิดราคาตามความยาวลูปดังนี้<br /><br />20-30 วินาที 350 Baht<br />30-60 วินาที 400 Baht<br />1:00-1:30 นาที 450 Baht<br />1:30-2:00 นาที 550 Baht<br />&gt;2:00 นาที 600 Baht</p>
-                    <p><span style="text-decoration: underline;">ลิขสิทธิ์เพลงมีสองรูปแบบ<br /></span>1. เช่า (Single Use License)- ใช้ได้ต่อหนึ่งโปรเจกต์* ราคาตามที่กำหนดด้านบน หลังการตกลงซื้อขายท่านต้องกรอกเอกสารแล้วส่งมาตามอีเมลนี้ stockmusicth@gmail.com<br />เอกสาร&nbsp;: <a href="http://goo.gl/znVeId">http://goo.gl/xH9vK6</a><br />2. ซื้อขาด (Perpetual License) - ใช้ได้ตลอดไปทุกโปรเจกต์ ราคาเราจะคิดอีกแบบนึงครับ ติดต่อมาได้ที่อีเมล stockmusicth@gmail.com</p>
-                    <p>ท่านสามารถให้แต่งใหม่ในราคาถูกได้ โดยที่ลิขสิทธ์เพลงยังเป็นของเรา(Motion Square Music)อยู่และเราสามารถเอาไปใช้ต่อได้ โดยคิดราคาก็เป็นราคาเดิมตามเวลา + 300 Baht ค่าทำใหม่ครับ (ราคาพิเศษจำนวนจำกัด ราคาจะมีการเปลี่ยนแปลงภายหลัง)<br /><br />เช่นถ้าแต่งลูปในเวลา 45 วินาที ราคาก็จะเป็น 400+300 = 700 บาท ครับ</p>
-                    <p>_______________<br />* หนึ่งโปรเจกต์ยกตัวอย่างเช่น รู้สู้ Flood เช่าเพลงไปใช้ จะสามารถใส่ได้ทุกวิดีโอภายใต้โปรเจกต์ชื่อ รู้สู้ Flood เท่านั้น<br />** บางลูปจะมี start กับ end เพื่อไว้ใช้เริ่มเพลงกับจบเพลงให้ด้วย<br />*** หากแต่งใหม่ความยาวมากกว่า 2:00 นาที ราคาอาจมีการเปลี่ยนแปลงตามความเหมาะสม</p>
-                    <br><h4>STOCK MUSIC</h4>
-                    <p>เช่าดนตรีในรูปแบบจบในหนึ่งเพลง(song)ที่อยู่ใน Library ของเรา เพื่อใช้ในงานโฆษณา เกมส์ ภาพยนต์ และอื่นๆ ราคาสามารถสอบถามได้ที่ stockmusicth@gmail.com</p>
-                    <p>ราคามีการเปลี่ยนแปลงตามขนาดของโปรดักชั่น และวิธีการเผยแพร่ทางสื่อ</p>
-                    <br><h4>ORIGINAL SCORE</h4>
-                    <p>ประพันธ์ดนตรีขึ้นมาใหม่ ดนตรีประกอบภาพยนต์ เกมส์ หรือสื่อโฆษณา (ที่ไม่ใช่เป็นดนตรี Loop)</p>
-                    <p>ราคาขั้นต่ำต่อหนึ่งโปรเจ็กต์ นาทีแรกสองพันบาท นาทีต่อไปนาทีละหนึ่งพันบาท* ราคาอาจเปลี่ยนแปลงตามความเหมาะสม สามารถสอบถามได้ที่ stockmusicth@gmail.com</p>
-                    <p>* ราคาดังกล่าวไม่รวมค่าใช้จ่ายหากมีการอัดเสียงเครื่องดนตรีจริง</p>
-                    <br><h4>MOCK UP SCORE</h4>
-                    <p>เปลี่ยนจาก MIDI ให้กลายเป็นเสียงเสมือนจริง</p>
-                    <p>ราคามีการเปลี่ยนแปลงตามความเหมาะสม สามารถสอบถามได้ที่ stockmusicth@gmail.com</p>
-		 		<div class="spacing"></div> 		
-			</div><!--/col-lg-12-->
-	 	</div><! --/row -->
-	 </div><! --/container -->
+<!-- *****************************************************************************************************************
+ BLUE WRAP
+ ***************************************************************************************************************** -->
+<div id="blue">
+    <div class="container">
+        <div class="row">
+            <h3>Pricing and Services</h3>
+        </div>
+        <!-- /row -->
+    </div>
+    <!-- /container -->
+</div>
+<!-- /blue -->
 
 
-	<!-- *****************************************************************************************************************
-	 FOOTER
-	 ***************************************************************************************************************** -->
-	 <div id="footerwrap">
-	 	<div class="container">
-		 	<div class="row">
-		 		<div class="col-lg-4">
-		 			<h4>About</h4>
-		 			<div class="hline-w"></div>
-		 			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
-		 		</div>
-		 		<div class="col-lg-4">
-		 			<h4>Social Links</h4>
-		 			<div class="hline-w"></div>
-		 			<p>
-		 				<a href="#"><i class="fa fa-dribbble"></i></a>
-		 				<a href="#"><i class="fa fa-facebook"></i></a>
-		 				<a href="#"><i class="fa fa-twitter"></i></a>
-		 				<a href="#"><i class="fa fa-instagram"></i></a>
-		 				<a href="#"><i class="fa fa-tumblr"></i></a>
-		 			</p>
-		 		</div>
-		 		<div class="col-lg-4">
-		 			<h4>Our Bunker</h4>
-		 			<div class="hline-w"></div>
-		 			<p>
-		 				Some Ave, 987,<br/>
-		 				23890, New York,<br/>
-		 				United States.<br/>
-		 			</p>
-		 		</div>
-		 	
-		 	</div><! --/row -->
-	 	</div><! --/container -->
-	 </div><! --/footerwrap -->
-	 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
-	<script src="assets/js/retina-1.1.0.js"></script>
-	<script src="assets/js/jquery.hoverdir.js"></script>
-	<script src="assets/js/jquery.hoverex.min.js"></script>
-	<script src="assets/js/jquery.prettyPhoto.js"></script>
-  	<script src="assets/js/jquery.isotope.min.js"></script>
-  	<script src="assets/js/custom.js"></script>
+<!-- *****************************************************************************************************************
+ BLOG CONTENT
+ ***************************************************************************************************************** -->
+
+<div class="container mtb">
+    <div class="row">
+
+        <! -- SINGLE POST -->
+        <div class="col-lg-12">
+            <! -- Blog Post 1 -->
+            <p><img class="img-responsive" src="assets/img/post01.jpg"></p>
+            <a href="single-post.html"><h3 class="ctitle">Pricing and Services</h3></a>
+            <br><h4>LOOP MUSIC</h4>
+
+            <p>ดนตรีที่วนซ้ำได้ เพื่อใช้ในงานเกมส์ วิดีโอ infographic หรืออื่นๆ<br/>คิดราคาตามความยาวลูปดังนี้<br/><br/>20-30
+                วินาที 350 Baht<br/>30-60 วินาที 400 Baht<br/>1:00-1:30 นาที 450 Baht<br/>1:30-2:00 นาที 550 Baht<br/>&gt;2:00
+                นาที 600 Baht</p>
+
+            <p><span style="text-decoration: underline;">ลิขสิทธิ์เพลงมีสองรูปแบบ<br/></span>1. เช่า (Single Use
+                License)- ใช้ได้ต่อหนึ่งโปรเจกต์* ราคาตามที่กำหนดด้านบน
+                หลังการตกลงซื้อขายท่านต้องกรอกเอกสารแล้วส่งมาตามอีเมลนี้ stockmusicth@gmail.com<br/>เอกสาร&nbsp;: <a
+                        href="http://goo.gl/znVeId">http://goo.gl/xH9vK6</a><br/>2. ซื้อขาด (Perpetual License) -
+                ใช้ได้ตลอดไปทุกโปรเจกต์ ราคาเราจะคิดอีกแบบนึงครับ ติดต่อมาได้ที่อีเมล stockmusicth@gmail.com</p>
+
+            <p>ท่านสามารถให้แต่งใหม่ในราคาถูกได้ โดยที่ลิขสิทธ์เพลงยังเป็นของเรา(Motion Square
+                Music)อยู่และเราสามารถเอาไปใช้ต่อได้ โดยคิดราคาก็เป็นราคาเดิมตามเวลา + 300 Baht ค่าทำใหม่ครับ
+                (ราคาพิเศษจำนวนจำกัด ราคาจะมีการเปลี่ยนแปลงภายหลัง)<br/><br/>เช่นถ้าแต่งลูปในเวลา 45 วินาที ราคาก็จะเป็น
+                400+300 = 700 บาท ครับ</p>
+
+            <p>_______________<br/>* หนึ่งโปรเจกต์ยกตัวอย่างเช่น รู้สู้ Flood เช่าเพลงไปใช้
+                จะสามารถใส่ได้ทุกวิดีโอภายใต้โปรเจกต์ชื่อ รู้สู้ Flood เท่านั้น<br/>** บางลูปจะมี start กับ end
+                เพื่อไว้ใช้เริ่มเพลงกับจบเพลงให้ด้วย<br/>*** หากแต่งใหม่ความยาวมากกว่า 2:00 นาที
+                ราคาอาจมีการเปลี่ยนแปลงตามความเหมาะสม</p>
+            <br><h4>STOCK MUSIC</h4>
+
+            <p>เช่าดนตรีในรูปแบบจบในหนึ่งเพลง(song)ที่อยู่ใน Library ของเรา เพื่อใช้ในงานโฆษณา เกมส์ ภาพยนต์ และอื่นๆ
+                ราคาสามารถสอบถามได้ที่ stockmusicth@gmail.com</p>
+
+            <p>ราคามีการเปลี่ยนแปลงตามขนาดของโปรดักชั่น และวิธีการเผยแพร่ทางสื่อ</p>
+            <br><h4>ORIGINAL SCORE</h4>
+
+            <p>ประพันธ์ดนตรีขึ้นมาใหม่ ดนตรีประกอบภาพยนต์ เกมส์ หรือสื่อโฆษณา (ที่ไม่ใช่เป็นดนตรี Loop)</p>
+
+            <p>ราคาขั้นต่ำต่อหนึ่งโปรเจ็กต์ นาทีแรกสองพันบาท นาทีต่อไปนาทีละหนึ่งพันบาท*
+                ราคาอาจเปลี่ยนแปลงตามความเหมาะสม สามารถสอบถามได้ที่ stockmusicth@gmail.com</p>
+
+            <p>* ราคาดังกล่าวไม่รวมค่าใช้จ่ายหากมีการอัดเสียงเครื่องดนตรีจริง</p>
+            <br><h4>MOCK UP SCORE</h4>
+
+            <p>เปลี่ยนจาก MIDI ให้กลายเป็นเสียงเสมือนจริง</p>
+
+            <p>ราคามีการเปลี่ยนแปลงตามความเหมาะสม สามารถสอบถามได้ที่ stockmusicth@gmail.com</p>
+
+            <div class="spacing"></div>
+        </div>
+        <!--/col-lg-12-->
+    </div>
+    <! --/row -->
+</div>
+<! --/container -->
 
 
-  </body>
+<!-- *****************************************************************************************************************
+ FOOTER
+ ***************************************************************************************************************** -->
+<div id="footerwrap">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-4">
+                <h4>About</h4>
+
+                <div class="hline-w"></div>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's standard dummy text ever since the 1500s.</p>
+            </div>
+            <div class="col-lg-4">
+                <h4>Social Links</h4>
+
+                <div class="hline-w"></div>
+                <p>
+                    <a href="#"><i class="fa fa-dribbble"></i></a>
+                    <a href="#"><i class="fa fa-facebook"></i></a>
+                    <a href="#"><i class="fa fa-twitter"></i></a>
+                    <a href="#"><i class="fa fa-instagram"></i></a>
+                    <a href="#"><i class="fa fa-tumblr"></i></a>
+                </p>
+            </div>
+            <div class="col-lg-4">
+                <h4>Our Bunker</h4>
+
+                <div class="hline-w"></div>
+                <p>
+                    Some Ave, 987,<br/>
+                    23890, New York,<br/>
+                    United States.<br/>
+                </p>
+            </div>
+
+        </div>
+        <! --/row -->
+    </div>
+    <! --/container -->
+</div>
+<! --/footerwrap -->
+
+<!-- Bootstrap core JavaScript
+================================================== -->
+<!-- Placed at the end of the document so the pages load faster -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<script src="assets/js/bootstrap.min.js"></script>
+<script src="assets/js/retina-1.1.0.js"></script>
+<script src="assets/js/jquery.hoverdir.js"></script>
+<script src="assets/js/jquery.hoverex.min.js"></script>
+<script src="assets/js/jquery.prettyPhoto.js"></script>
+<script src="assets/js/jquery.isotope.min.js"></script>
+<script src="assets/js/custom.js"></script>
+
+
+</body>
 </html>
