--- a/services.html
+++ b/services.html
@@ -39,25 +39,16 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="index.html">SOLID.</a>
+            <a class="navbar-brand" href="index.html">MOTION SQUARE MUSIC</a>
         </div>
         <div class="navbar-collapse collapse navbar-right">
             <ul class="nav navbar-nav">
-                <li><a href="index.html">HOME</a></li>
+                <li class="active"><a href="index.html">HOME</a></li>
                 <li><a href="about.html">ABOUT</a></li>
-                <li><a href="contact.html">CONTACT</a></li>
-                <li class="dropdown active">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">PAGES <b class="caret"></b></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="blog.html">BLOG</a></li>
-                        <li><a href="single-post.html">SINGLE POST</a></li>
-                        <li><a href="portfolio.html">PORTFOLIO</a></li>
-                        <li><a href="single-project.html">SINGLE PROJECT</a></li>
-                    </ul>
-                </li>
+                <li><a href="services.html">SERVICES</a></li>
+                <li><a href="freestuff.html">FREE STUFFS</a></li>
             </ul>
-        </div>
-        <!--/.nav-collapse -->
+        </div><!--/.nav-collapse -->
     </div>
 </div>
 
@@ -68,13 +59,9 @@
     <div class="container">
         <div class="row">
             <h3>Pricing and Services</h3>
-        </div>
-        <!-- /row -->
-    </div>
-    <!-- /container -->
-</div>
-<!-- /blue -->
-
+        </div><!-- /row -->
+    </div><!-- /container -->
+</div><!-- /blue -->
 
 <!-- *****************************************************************************************************************
  BLOG CONTENT
@@ -82,13 +69,12 @@
 
 <div class="container mtb">
     <div class="row">
-
-        <! -- SINGLE POST -->
-        <div class="col-lg-12">
-            <! -- Blog Post 1 -->
+        <!-- SINGLE POST -->
+        <div class="col-lg-offset-1 col-lg-9">
             <p><img class="img-responsive" src="assets/img/post01.jpg"></p>
-            <a href="single-post.html"><h3 class="ctitle">Pricing and Services</h3></a>
-            <br><h4>LOOP MUSIC</h4>
+            <h3 class="ctitle">Pricing and Services</h3>
+            <div class="hline"></div><br><br>
+            <h4>LOOP MUSIC</h4>
 
             <p>ดนตรีที่วนซ้ำได้ เพื่อใช้ในงานเกมส์ วิดีโอ infographic หรืออื่นๆ<br/>คิดราคาตามความยาวลูปดังนี้<br/><br/>20-30
                 วินาที 350 Baht<br/>30-60 วินาที 400 Baht<br/>1:00-1:30 นาที 450 Baht<br/>1:30-2:00 นาที 550 Baht<br/>&gt;2:00
@@ -130,13 +116,9 @@
             <p>ราคามีการเปลี่ยนแปลงตามความเหมาะสม สามารถสอบถามได้ที่ stockmusicth@gmail.com</p>
 
             <div class="spacing"></div>
-        </div>
-        <!--/col-lg-12-->
-    </div>
-    <! --/row -->
-</div>
-<! --/container -->
-
+        </div><!--/col-lg-12-->
+    </div><!--/row -->
+</div><!--/container -->
 
 <!-- *****************************************************************************************************************
  FOOTER
@@ -173,13 +155,9 @@
                     United States.<br/>
                 </p>
             </div>
-
-        </div>
-        <! --/row -->
-    </div>
-    <! --/container -->
-</div>
-<! --/footerwrap -->
+        </div><!--/row -->
+    </div><!--/container -->
+</div><!--/footerwrap -->
 
 <!-- Bootstrap core JavaScript
 ================================================== -->
