--- a/services.html
+++ b/services.html
@@ -70,7 +70,9 @@
 <div class="container mtb">
     <div class="row">
         <!-- SINGLE POST -->
-        <div class="col-lg-offset-1 col-lg-9">
+        <div class="col-lg-offset-1 col-lg-9
+                    col-md-offset-1 col-md-9
+                    col-sm-offset-1 col-sm-9">
             <p><img class="img-responsive" src="assets/img/post01.jpg"></p>
             <h3 class="ctitle">Pricing and Services</h3>
             <div class="hline"></div><br><br>
@@ -126,34 +128,33 @@
 <div id="footerwrap">
     <div class="container">
         <div class="row">
-            <div class="col-lg-4">
-                <h4>About</h4>
-
+            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                <h4>Contact Us</h4>
                 <div class="hline-w"></div>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                    industry's standard dummy text ever since the 1500s.</p>
+                <a class="btn btn-success" href="mailto:stockmusicth@gmail.com">stockmusicth@gmail.com</a>
             </div>
-            <div class="col-lg-4">
-                <h4>Social Links</h4>
-
+            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                <h4>Subscribe</h4>
                 <div class="hline-w"></div>
-                <p>
-                    <a href="#"><i class="fa fa-dribbble"></i></a>
-                    <a href="#"><i class="fa fa-facebook"></i></a>
-                    <a href="#"><i class="fa fa-twitter"></i></a>
-                    <a href="#"><i class="fa fa-instagram"></i></a>
-                    <a href="#"><i class="fa fa-tumblr"></i></a>
-                </p>
-            </div>
-            <div class="col-lg-4">
-                <h4>Our Bunker</h4>
-
-                <div class="hline-w"></div>
-                <p>
-                    Some Ave, 987,<br/>
-                    23890, New York,<br/>
-                    United States.<br/>
-                </p>
+                <div id="mc_embed_signup">
+                    <form action="http://motionsquaremusic.us3.list-manage1.com/subscribe/post?u=7e6e5e435a36bf94e237157f3&amp;id=96565976df"
+                          method="post"
+                          id="mc-embedded-subscribe-form"
+                          name="mc-embedded-subscribe-form"
+                          class="form-inline"
+                          target="_blank"
+                          novalidate="">
+                        <div class="form-group">
+                            <label for="mce-EMAIL"></label>
+                            <input type="email" value="" name="EMAIL" class="form-control email" id="mce-EMAIL" placeholder="Enter email address" required="">
+                            <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                            <div style="position: absolute; left: -5000px;">
+                                <input type="text" name="b_7e6e5e435a36bf94e237157f3_96565976df" value="">
+                            </div>
+                            <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-info">
+                        </div>
+                    </form>
+                </div>
             </div>
         </div><!--/row -->
     </div><!--/container -->
