--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <h5>Stock music for Game, Film & Multimedia</h5>
             </div>
             <div class="col-lg-8 col-lg-offset-2 himg">
-                <img src="assets/img/browser.png" class="img-responsive">
+                <img src="assets/img/desktop.png" class="img-responsive">
             </div>
         </div>
         <!-- /row -->
