edit content, menu bar&footer fix

--- a/index.html
+++ b/index.html
@@ -47,16 +47,7 @@
                 <li><a href="about.html">ABOUT</a></li>
                 <li><a href="services.html">SERVICES</a></li>
                 <li><a href="freestuff.html">FREE STUFFS</a></li>
-                <li><a href="contact.html">CONTACT</a></li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">PAGES <b class="caret"></b></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="blog.html">BLOG</a></li>
-                        <li><a href="single-post.html">SINGLE POST</a></li>
-                        <li><a href="portfolio.html">PORTFOLIO</a></li>
-                        <li><a href="single-project.html">SINGLE PROJECT</a></li>
-                    </ul>
-                </li>
+                <li><a href="samples.html">SAMPLES</a></li>
             </ul>
         </div>
         <!--/.nav-collapse -->
@@ -88,7 +79,7 @@
  ***************************************************************************************************************** -->
 <div id="service">
     <div class="container">
-        <h3 class="centered">Services we offered</h3><br/>
+        <h3 class="centered">SERVICES WE OFFERED</h3><br/>
 
         <div class="row centered">
             <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
@@ -132,7 +123,7 @@
  PORTFOLIO SECTION
  ***************************************************************************************************************** -->
 <div id="portfoliowrap">
-    <h3>Music Collection</h3>
+    <h3>MUSIC COLLECTION</h3>
 
     <div class="portfolio-centered">
         <div class="recentitems portfolio">
@@ -352,7 +343,7 @@
     <div class="row">
 
         <div class="col-lg-6">
-            <h4>About MotionSquareMusic</h4>
+            <h3>About MotionSquareMusic</h3><br>
 
             <p>เคยมั้ยที่ต้องขโมยเพลงบนอินเตอร์เน็ตมาใช้ในภาพยนต์ของคุณเพราะว่าไม่มีงบจะจ้างนักแต่งเพลง? <br><br>
 
@@ -406,41 +397,37 @@
 <div id="footerwrap">
     <div class="container">
         <div class="row">
-            <div class="col-lg-4">
-                <h4>About</h4>
-
+            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                <h4>Contact Us</h4>
                 <div class="hline-w"></div>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                    industry's standard dummy text ever since the 1500s.</p>
+                <a class="btn btn-success" href="mailto:stockmusicth@gmail.com">stockmusicth@gmail.com</a>
             </div>
-            <div class="col-lg-4">
-                <h4>Social Links</h4>
-
+            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                <h4>Subscribe</h4>
                 <div class="hline-w"></div>
-                <p>
-                    <a href="#"><i class="fa fa-dribbble"></i></a>
-                    <a href="#"><i class="fa fa-facebook"></i></a>
-                    <a href="#"><i class="fa fa-twitter"></i></a>
-                    <a href="#"><i class="fa fa-instagram"></i></a>
-                    <a href="#"><i class="fa fa-tumblr"></i></a>
-                </p>
+                <div id="mc_embed_signup">
+                    <form action="http://motionsquaremusic.us3.list-manage1.com/subscribe/post?u=7e6e5e435a36bf94e237157f3&amp;id=96565976df"
+                          method="post"
+                          id="mc-embedded-subscribe-form"
+                          name="mc-embedded-subscribe-form"
+                          class="form-inline"
+                          target="_blank"
+                          novalidate="">
+                        <div class="form-group">
+                            <label for="mce-EMAIL"></label>
+                            <input type="email" value="" name="EMAIL" class="form-control email" id="mce-EMAIL" placeholder="Enter email address" required="">
+                            <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                            <div style="position: absolute; left: -5000px;">
+                                <input type="text" name="b_7e6e5e435a36bf94e237157f3_96565976df" value="">
+                            </div>
+                            <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-info">
+                        </div>
+                    </form>
+                </div>
             </div>
-            <div class="col-lg-4">
-                <h4>Our Bunker</h4>
-
-                <div class="hline-w"></div>
-                <p>
-                    Some Ave, 987,<br/>
-                    23890, New York,<br/>
-                    United States.<br/>
-                </p>
-            </div>
-        </div>
-        <!--/row -->
-    </div>
-    <!--/container -->
-</div>
-<!--/footerwrap -->
+        </div><!--/row -->
+    </div><!--/container -->
+</div><!--/footerwrap -->
 
 <!-- Bootstrap core JavaScript
 ================================================== -->
