--- a/services.html
+++ b/services.html
@@ -47,6 +47,7 @@
                 <li><a href="about.html">ABOUT</a></li>
                 <li><a href="services.html">SERVICES</a></li>
                 <li><a href="freestuff.html">FREE STUFFS</a></li>
+                <li><a href="samples.html">SAMPLES</a></li>
             </ul>
         </div><!--/.nav-collapse -->
     </div>
