--- a/about.html
+++ b/about.html
@@ -87,7 +87,7 @@
                 คุณภาพสูงมูลค่ารวมหลายแสนบาท และเราได้ศึกษาเฉพาะทางมาเพื่อผลิตดนตรีประกอบภาพยนต์โดยตรง</p>
             <p>เรานำเสนอหนทางที่ &ldquo;ง่ายที่สุด&rdquo; และ &ldquo;เร็วที่สุด&rdquo;
                 สำหรับคนทำภาพยนต์ทุกๆแนวไม่ว่าจะสั้นหรือยาว เกมส์ โฆษณาและสื่ออื่นๆ ด้วยเพลงจาก composer
-                รุ่นใหม่ที่มีประสบการณ์ ที่เปิดให้คุณสามารถซื้อหรือสั่งทำและนำไปใช้ในโปรเจ็คของคุณได้ทันที
+                ที่มีประสบการณ์ ที่เปิดให้คุณสามารถซื้อหรือสั่งทำและนำไปใช้ในโปรเจ็คของคุณได้ทันที
                 ด้วยราคาที่เป็นมิตรทำให้คุณเองก็สามารถได้ใช้งานดีๆที่ช่วยยกระดับโปรเจ็คของคุณ แม้จะมีงบการเงินที่จำกัด
             </p><p>
                 Motion Square Music ก่อตั้งโดยฟิว และ บิว ที่เริ่มต้นรู้จักและทำงานด้วยกันเมื่อปี 2012 ในงานดนตรีประกอบซีรี่ยส์เรื่องหนึ่ง และจากนั้นเราก็แลกเปลี่ยนความคิดกัน
