edit color and content

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="index.html">MSM</a>
+            <a class="navbar-brand" href="index.html">MOTION SQUARE MUSIC</a>
         </div>
         <div class="navbar-collapse collapse navbar-right">
             <ul class="nav navbar-nav">
@@ -356,7 +356,7 @@
                 ด้วยราคาที่เป็นมิตรทำให้คุณเองก็สามารถได้ใช้งานดีๆที่ช่วยยกระดับโปรเจ็ค ของคุณ แม้จะมีงบการเงินที่จำกัด
                 เริ่มต้นที่ 350 บาท
             </p>
-            <br/><a href="services.html" class="btn btn-theme">Know more about us</a>
+            <br/><a href="about.html" class="btn btn-theme">Know more about us</a>
         </div>
         <div class="col-lg-6">
             <img class="img-responsive" src="assets/img/agency.jpg" alt="">
@@ -400,7 +400,7 @@
             <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                 <h4>Contact Us</h4>
                 <div class="hline-w"></div>
-                <a class="btn btn-success" href="mailto:stockmusicth@gmail.com">stockmusicth@gmail.com</a>
+                <a class="btn btn-info" href="mailto:stockmusicth@gmail.com">stockmusicth@gmail.com</a>
             </div>
             <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                 <h4>Subscribe</h4>
@@ -420,7 +420,7 @@
                             <div style="position: absolute; left: -5000px;">
                                 <input type="text" name="b_7e6e5e435a36bf94e237157f3_96565976df" value="">
                             </div>
-                            <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-info">
+                            <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-success">
                         </div>
                     </form>
                 </div>
