--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="index.html">MSM.</a>
+            <a class="navbar-brand" href="index.html">MOTION SQUARE MUSIC</a>
         </div>
         <div class="navbar-collapse collapse navbar-right">
             <ul class="nav navbar-nav">
