--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <ul class="nav navbar-nav">
                 <li class="active"><a href="index.html">HOME</a></li>
                 <li><a href="about.html">ABOUT</a></li>
-                <li><a href="services.html">SERVICES</a></li>
+                <li><a href="services.html">PRICING</a></li>
                 <li><a href="freestuff.html">FREE STUFFS</a></li>
                 <li><a href="samples.html">SAMPLES</a></li>
             </ul>
@@ -75,55 +75,42 @@
 <!-- /headerwrap -->
 
 <!-- *****************************************************************************************************************
- SERVICE LOGOS
+ MIDDLE CONTENT
  ***************************************************************************************************************** -->
-<div id="service">
-    <div class="container">
-        <h3 class="centered">SERVICES WE OFFERED</h3><br/>
 
-        <div class="row centered">
-            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                <i class="fa fa-heart-o"></i>
-                <h4>Stock Music</h4>
+<div class="container mtb">
+    <div class="row">
 
-                <p>เช่าดนตรีในรูปแบบจบในหนึ่งเพลง(song) เพื่อใช้ในงานโฆษณา เกมส์ ภาพยนต์ และอื่นๆ</p>
-                <!--<p><br/><a href="#" class="btn btn-theme">More Info</a></p>-->
-            </div>
-            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                <i class="fa fa-flask"></i>
-                <h4>Loop Music</h4>
+        <div class="col-lg-6">
+            <h3>ให้ดนตรีช่วยเล่าเรื่องราวของคุณ</h3><br>
 
-                <p>ดนตรีที่วนซ้ำได้ เพื่อใช้ในงานเกมส์ วิดีโอ infographic หรืออื่นๆ</p>
-                <!--<p><br/><a href="#" class="btn btn-theme">More Info</a></p>-->
-            </div>
-            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                <i class="fa fa-trophy"></i>
-                <h4>Original Score</h4>
+            <p>เคยมั้ยที่ต้องขโมยเพลงบนอินเตอร์เน็ตมาใช้ในภาพยนต์ของคุณเพราะว่าไม่มีงบจะจ้างนักแต่งเพลง? <br><br>
 
-                <p>ประพันธ์ดนตรีขึ้นมาใหม่ ดนตรีประกอบภาพยนต์ เกมส์ หรือสื่อโฆษณา</p>
-                <!--<p><br/><a href="#" class="btn btn-theme">More Info</a></p>-->
-            </div>
-            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                <i class="fa fa-trophy"></i>
-                <h4>Mock Up Score</h4>
+                เคยมั้ยที่ไม่สามารถหาเพลงที่ถูกใจมาใช้ในงานของคุณได้ซะที? <br><br>
 
-                <p>เปลี่ยนจาก MIDI, Score ให้กลายเป็นเสียงเสมือนจริง</p>
-                <!--<p><br/><a href="#" class="btn btn-theme">More Info</a></p>-->
-            </div>
+                เรา Motion Square Music นำเสนอหนทางที่ “ง่ายที่สุด” และ “เร็วที่สุด”
+                สำหรับคนทำภาพยนต์ทุกๆแนวไม่ว่าจะสั้นหรือยาว เกมส์ โฆษณาและสื่ออื่นๆ ด้วยเพลงจาก composer
+                ที่มีประสบการณ์มามากมายและศึกษาด้านดนตรีประกอบภาพยนต์มาโดยตรง
+                ที่เปิดให้คุณสามารถซื้อเพลงที่มีอยู่หรือสั่งทำใหม่และนำไปใช้ในโปรเจ็คของคุณได้ทันที
+                ด้วยราคาที่เป็นมิตรทำให้คุณเองก็สามารถได้ใช้งานดีๆที่ช่วยยกระดับโปรเจ็ค ของคุณ แม้จะมีงบการเงินที่จำกัด
+                เริ่มต้นที่ 350 บาท
+            </p>
+            <br/><a href="about.html" class="btn btn-theme">Know more about us</a>
         </div>
-        <div class="row centered">
-            <br><a href="services.html" class="btn btn-theme">More Service Information</a>
+        <div class="col-lg-6">
+            <img class="img-responsive" src="assets/img/agency.jpg" alt="">
         </div>
+
     </div>
-    <!--/sub container -->
+    <!--/row -->
 </div>
-<!--/service -->
+<!--/container -->
 
 <!-- *****************************************************************************************************************
  PORTFOLIO SECTION
  ***************************************************************************************************************** -->
 <div id="portfoliowrap">
-    <h3>MUSIC COLLECTION</h3>
+    <h3>OUR MUSIC COLLECTION</h3><p>คลิกเพื่อฟังเพลงในคลังของเรา</p>
 
     <div class="portfolio-centered">
         <div class="recentitems portfolio">
@@ -334,38 +321,51 @@
 </div>
 <!--/Portfoliowrap -->
 
-
 <!-- *****************************************************************************************************************
- MIDDLE CONTENT
+ SERVICE LOGOS
  ***************************************************************************************************************** -->
+<div id="service">
+    <div class="container">
+        <h3 class="centered">SERVICES WE OFFERED</h3><br/>
 
-<div class="container mtb">
-    <div class="row">
+        <div class="row centered">
+            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+                <i class="fa fa-heart-o"></i>
+                <h4>Stock Music</h4>
 
-        <div class="col-lg-6">
-            <h3>About MotionSquareMusic</h3><br>
+                <p>เช่าดนตรีในรูปแบบจบในหนึ่งเพลง(song) เพื่อใช้ในงานโฆษณา เกมส์ ภาพยนต์ และอื่นๆ</p>
+                <!--<p><br/><a href="#" class="btn btn-theme">More Info</a></p>-->
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+                <i class="fa fa-flask"></i>
+                <h4>Loop Music</h4>
 
-            <p>เคยมั้ยที่ต้องขโมยเพลงบนอินเตอร์เน็ตมาใช้ในภาพยนต์ของคุณเพราะว่าไม่มีงบจะจ้างนักแต่งเพลง? <br><br>
+                <p>ดนตรีที่วนซ้ำได้ เพื่อใช้ในงานเกมส์ วิดีโอ infographic หรืออื่นๆ</p>
+                <!--<p><br/><a href="#" class="btn btn-theme">More Info</a></p>-->
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+                <i class="fa fa-trophy"></i>
+                <h4>Original Score</h4>
 
-                เคยมั้ยที่ไม่สามารถหาเพลงที่ถูกใจมาใช้ในงานของคุณได้ซะที? <br><br>
+                <p>ประพันธ์ดนตรีขึ้นมาใหม่ ดนตรีประกอบภาพยนต์ เกมส์ หรือสื่อโฆษณา</p>
+                <!--<p><br/><a href="#" class="btn btn-theme">More Info</a></p>-->
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+                <i class="fa fa-trophy"></i>
+                <h4>Mock Up Score</h4>
 
-                เรา Motion Square Music นำเสนอหนทางที่ “ง่ายที่สุด” และ “เร็วที่สุด”
-                สำหรับคนทำภาพยนต์ทุกๆแนวไม่ว่าจะสั้นหรือยาว เกมส์ โฆษณาและสื่ออื่นๆ ด้วยเพลงจาก composer
-                ที่มีประสบการณ์มามากมายและศึกษาด้านดนตรีประกอบภาพยนต์มาโดยตรง
-                ที่เปิดให้คุณสามารถซื้อหรือสั่งทำและนำไปใช้ในโปรเจ็คของคุณได้ทันที
-                ด้วยราคาที่เป็นมิตรทำให้คุณเองก็สามารถได้ใช้งานดีๆที่ช่วยยกระดับโปรเจ็ค ของคุณ แม้จะมีงบการเงินที่จำกัด
-                เริ่มต้นที่ 350 บาท
-            </p>
-            <br/><a href="about.html" class="btn btn-theme">Know more about us</a>
+                <p>เปลี่ยนจาก MIDI, Score ให้กลายเป็นเสียงเสมือนจริง</p>
+                <!--<p><br/><a href="#" class="btn btn-theme">More Info</a></p>-->
+            </div>
         </div>
-        <div class="col-lg-6">
-            <img class="img-responsive" src="assets/img/agency.jpg" alt="">
+        <div class="row centered">
+            <br><a href="services.html" class="btn btn-theme">More Service Information</a>
         </div>
-
     </div>
-    <!--/row -->
+    <!--/sub container -->
 </div>
-<!--/container -->
+<!--/service -->
+
 
 <!-- *****************************************************************************************************************
  TESTIMONIALS
@@ -380,9 +380,9 @@
                     industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
                     and scrambled it to make a type specimen book. It has survived not only five centuries, but also the
                     leap into electronic typesetting, remaining essentially unchanged.</p>
-                <h4><br/>Marcel Newman</h4>
+                <h4><br/>John Williams</h4>
 
-                <p>WEB DESIGNER - BLACKTIE.CO</p>
+                <p>Music Composer</p>
             </div>
         </div>
         <!--/row -->
