--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
             <ul class="nav navbar-nav">
                 <li class="active"><a href="index.html">HOME</a></li>
                 <li><a href="about.html">ABOUT</a></li>
-                <li><a href="services.html">SERVICES</a></li>
+                <li><a href="services.html">PRICING</a></li>
                 <li><a href="freestuff.html">FREE STUFFS</a></li>
                 <li><a href="samples.html">SAMPLES</a></li>
             </ul>
